--- a/server/data/tareas.json
+++ b/server/data/tareas.json
@@ -1,27 +1,27 @@
 [
     {
         "id": "1",
-        "descripcion": "Tarea numero 1 nashe dou",
+        "descripcion": "Tarea numero 1",
         "estado": "finalizada"
     },
     {
         "id": "2",
-        "descripcion": "Tarea numero 1 nashe dou",
+        "descripcion": "Tarea numero 2",
         "estado": "pendiente"
     },
     {
         "id": "3",
-        "descripcion": "Tarea numero 1 nashe dou",
+        "descripcion": "Tarea numero 3",
         "estado": "finalizada"
     },
     {
         "id": "4",
-        "descripcion": "Tarea numero 1 nashe dou",
+        "descripcion": "Tarea numero 4",
         "estado": "pendiente"
     },
     {
         "id": "5",
-        "descripcion": "Tarea numero 1 nashe dou",
+        "descripcion": "Tarea numero 5,
         "estado": "finalizada"
     }
 ]
