--- a/server/data/tareas.json
+++ b/server/data/tareas.json
@@ -21,7 +21,7 @@
     },
     {
         "id": "5",
-        "descripcion": "Tarea numero 5,
+        "descripcion": "Tarea numero 5",
         "estado": "finalizada"
     }
 ]
